fix text, fix bug on iphones

--- a/src/blocks/modules/Page-affiliates/program/program.scss
+++ b/src/blocks/modules/Page-affiliates/program/program.scss
@@ -8,6 +8,7 @@
     max-width: 1500px;
     margin: auto;
     justify-content: center;
+    position: relative;
     &.aos-animate {
         .bubble100--lg {
             animation: movingUp 10s linear 1s, explode .1s linear 11s;
@@ -200,6 +201,7 @@
     position: absolute;
     bottom: -20px;
     left: 40px;
+    z-index: 999999;
     @include max(780) { bottom: 40px; left: 60px; }
     @include sm(left, 30px);
     @include max(500) { bottom: 70px; left: 20px; }
